splash as dependencie

--- a/xbian-package-initramfs-tools/DEBIAN/control
+++ b/xbian-package-initramfs-tools/DEBIAN/control
@@ -7,6 +7,6 @@ Priority: standard
 Codename: wheezy
 Architecture: armhf
 Installed-Size: 28000
-Depends: busybox, udhcpc, udev, parted, btrfs-tools, klibc-utils 
+Depends: xbian-package-splash, busybox, udhcpc, udev, parted, btrfs-tools, klibc-utils 
 Maintainer: mk01 <development@xbian.org>
 Description: Initramfs handling tools.
