update to reboot service

--- a/content/etc/init/xbian-udpate-reboot.conf
+++ b/content/etc/init/xbian-udpate-reboot.conf
@@ -7,9 +7,9 @@ script
 
 	set +e
 
-	while pgrep apt-get > /dev/null; do sleep 5; done
-
-	splash --msgtxt="Update finished. Reboot in 2 minutes" --infinitebar
-	shutdown -r +2
+	while { pgrep dpkg >/dev/null|| pgrep apt-get >/dev/null; } ; do sleep 1; done
+	splash --msgtxt="Update finished. Rebooting now." --infinitebar
+	sync
+	reboot
 
 end script
