Update and rename xbian-udpate-reboot.conf to xbian-update-reboot.conf
Typo in filename and please check for inconsistancies in capitals. In most places, everything is lowecase.

--- a/content/etc/init/xbian-update-reboot.conf
+++ b/content/etc/init/xbian-update-reboot.conf
@@ -8,7 +8,7 @@ script
 	set +e
 
 	while { pgrep dpkg >/dev/null|| pgrep apt-get >/dev/null; } ; do sleep 1; done
-	splash --msgtxt="Update finished. Rebooting now." --infinitebar
+	splash --msgtxt="update finished. rebooting now." --infinitebar
 	sync
 	reboot
 
