--- a/content/DEBIAN/control
+++ b/content/DEBIAN/control
@@ -6,6 +6,6 @@ Essential: Yes
 Priority: standard
 Architecture: armhf
 Pre-Depends: initramfs-tools
-Depends: xbian-package-splash, busybox, udhcpc, udev, parted, btrfs-tools, klibc-utils
+Depends: busybox, udhcpc, udev, parted, btrfs-tools, klibc-utils
 Maintainer: mk01 <development@xbian.org>
 Description: Initramfs handling tools.
