--- a/content/etc/init/xbian-update-reboot.conf
+++ b/content/etc/init/xbian-update-reboot.conf
@@ -1,14 +1,14 @@
 #!upstart
 description "xbian-update-reboot"
 
-start on wait-for-apt-get
+manual
 
 script
 
 	set +e
 
 	while { pgrep dpkg >/dev/null|| pgrep apt-get >/dev/null; } ; do sleep 1; done
-	splash --msgtxt="update finished. rebooting now." --infinitebar
+	splash --msgtxt="update finished. rebooting now." --infinitebar &
 	sync
 	reboot
 
