--- a/content/DEBIAN/control
+++ b/content/DEBIAN/control
@@ -1,12 +1,12 @@
 Origin: XBian
 Package: xbian-package-initramfs-tools
-Version: 1.0-0.10
+Version: 1.0-0.11
 Section: kernel
 Essential: Yes
 Priority: standard
 Architecture: armhf
 Pre-Depends: initramfs-tools, triggerhappy
-Depends: busybox, udhcpc, udev, parted, btrfs-tools, klibc-utils
+Depends: busybox, udev, btrfs-tools (>=0.19+20130131-3+really20121004-1), klibc-utils
 Breaks: xbian-package-kernel (<< 1.3-0)
 Maintainer: mk01 <development@xbian.org>
 Description: Initramfs handling tools.
