--- a/content/DEBIAN/control
+++ b/content/DEBIAN/control
@@ -1,12 +1,12 @@
 Origin: XBian
 Package: xbian-package-initramfs-tools
-Version: 1.3.1-4
+Version: 1.3.1-5b
 Section: kernel
 Essential: Yes
 Priority: standard
 Architecture: armhf
 Pre-Depends: initramfs-tools, triggerhappy
 Depends: busybox, udev, btrfs-tools (>=1.0-xbian), klibc-utils
-Breaks: xbian-package-kernel (<<1.3-4.5), xbian-package-splash (<<1.0-1)
+Breaks: xbian-package-splash (<<1.0-1), xbian-package-kernel (<<1.3-5.5)
 Maintainer: mk01 <development@xbian.org>
 Description: Initramfs handling tools.
