--- a/content/DEBIAN/control
+++ b/content/DEBIAN/control
@@ -1,12 +1,12 @@
 Origin: XBian
 Package: xbian-package-initramfs-tools
-Version: 1.3.1-5e
+Version: 1.3.4-10c
 Section: kernel
 Essential: Yes
 Priority: standard
 Architecture: armhf
 Pre-Depends: initramfs-tools, triggerhappy
-Depends: busybox, udev, btrfs-tools (>=1.0-xbian), klibc-utils, xbian-package-kernel (>=1.3-5.5), xbian-package-splash (>=1.0-1)
-Breaks: xbian-update (<<1.0.2-0)
+Depends: udev, btrfs-tools (>=3.14.0), klibc-utils, xbian-package-kernel (>=1.3-6.3a) | linux-image-3.10.30-armmp, xbian-package-splash (>=2.0.2), xbian-package-config-shell (>=2.1.6-57)
+Replaces: xbian-update
 Maintainer: mk01 <development@xbian.org>
 Description: Initramfs handling tools.
