Change Architecture from armhf to all

--- a/content-tpl/DEBIAN/control
+++ b/content-tpl/DEBIAN/control
@@ -4,7 +4,7 @@ Version: __DATE__
 Section: kernel
 Essential: Yes
 Priority: standard
-Architecture: armhf
+Architecture: all
 Pre-Depends: initramfs-tools, triggerhappy
 Depends: udev, btrfs-progs, klibc-utils, xbian-package-kernel | linux-image-armmp | linux-image-bcm2836 | linux-image-bcm2837, u-boot-tools, ethtool
 Replaces: xbian-update
